--- a/src/components/section/CampSection.module.scss
+++ b/src/components/section/CampSection.module.scss
@@ -1,8 +1,56 @@
-.container {
+.wrapper {
+  background: #121217;
   width: 100%;
-  max-width: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 48px 0;
 }
+
+.container {
+  width: 100%;
+  max-width: 1100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.titleContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: 32px 0;
+
+  @media (max-width: 500px) {
+    padding: 24px 0;
+  }
+
+
+  .title {
+    color: var(--primary);
+    font-size: 32px;
+    font-weight: 700;
+  }
+
+  .description {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
+    color: #F0FFF4;
+    font-size: 16px;
+    font-weight: 500;
+
+    b {
+        color: var(--primary);
+      font-weight: 700;
+    }
+  }
+}
+
+.campContainer {
+
+}
+
