--- a/src/components/common/camp/CampCard.module.scss
+++ b/src/components/common/camp/CampCard.module.scss
@@ -1,7 +1,9 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 12px
+  gap: 12px;
+  cursor: pointer;
+  user-select: none;
 }
 
 .title {
