--- a/src/components/section/OnBoardingSection.module.scss
+++ b/src/components/section/OnBoardingSection.module.scss
@@ -5,20 +5,105 @@
 
   gap: 100px;
 
+  background: #121217;
   flex-direction: column;
   align-items: center;
   position: relative;
 
 }
 
+.contentContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  align-items: center;
+  position: absolute;
+  z-index: 5;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, 0);
+    @media (max-width: 500px) {
+        gap: 15px;
+    }
+}
+
+.sunrinLogoContainer {
+  position: relative;
+  width: 182px;
+  aspect-ratio: 182/24;
+
+  @media (max-width: 650px) {
+    width: 170px;
+  }
+  @media (max-width: 500px) {
+    width: 155px;
+  }
+
+  @media (max-width: 350px) {
+    width: 140px;
+  }
+}
+
+.ssfLogoContainer {
+  position: relative;
+  width: 515px;
+  aspect-ratio: 515/203;
+
+
+  @media (max-width: 650px) {
+    width: 417px;
+  }
+  @media (max-width: 500px) {
+    width: 317px;
+  }
+
+  @media (max-width: 350px) {
+    width: 250px;
+  }
+}
+
+.typography {
+  font-size: 24px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 150%;
+
+  @media (max-width: 650px) {
+    font-size: 20px;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 16px;
+  }
+
+  @media (max-width: 350px) {
+    font-size: 14px;
+  }
+}
+
+.background {
+  z-index: 0;
+  object-fit: cover;
+  object-position: top;
+}
+
+.overlay {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(18, 18, 23, 0.50) 37%, var(--background) 85%); /* 그라디언트 필터 */
+}
+
 .buttonContainer {
   position: absolute;
+  z-index: 10;
   display: flex;
   flex-direction: row;
   gap: 20px;
   bottom: 64px;
   width: 100%;
-    justify-content: center;
+  justify-content: center;
 
   @media (max-width: 400px) {
     flex-direction: column;
